@@ -1,67 +1,15 @@
 #!/usr/bin/make -f
-# Sample debian.rules file - for GNU Hello (1.3).
-# Copyright 1994,1995 by Ian Jackson.
-# I hereby give you perpetual unlimited permission to copy,
-# modify and relicense this file, provided that you do not remove
-# my name from the file itself.  (I assert my moral right of
-# paternity under the Copyright, Designs and Patents Act 1988.)
-# This file may have to be extensively modified
-#
-# Modified to be a prototype for debmake by Christoph Lameter <clameter@debian.org>
 
-#export DH_VERBOSE=1
+%:
+	dh $@
 
-package=boa
-
-build: build-stamp
-build-stamp: 
-	dh_testdir
-	dh_auto_configure
+override_dh_auto_build:
 	dh_auto_build
 	cd docs;make boa.html boa.info
-	touch build-stamp
 
-clean:
-	dh_testdir
-
+override_dh_auto_clean:
 	[ ! -f Makefile ] || make mrclean
 	[ ! -f docs/Makefile ] || make -C docs clean
-	dh_clean
 
-binary-indep:	build
-
-binary-arch:	build
-	dh_testdir
-	dh_testroot
-
-	dh_prep
-	dh_installdirs
-
-	dh_installdocs
-	dh_installinfo
-	dh_installexamples
-	dh_installmenu
+override_dh_installinit:
 	dh_installinit --error-handler=true
-	dh_installdebconf
-	dh_installcron
-	dh_installlogrotate
-	dh_installman
-	dh_installchangelogs
-
-	dh_install
-
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_makeshlibs
-	dh_md5sums
-	dh_builddeb
-
-# Below here is fairly generic really
-
-binary:		binary-indep binary-arch
-
-.PHONY: build clean binary-arch binary-indep binary
